bin/release/log.txt
In module 'anonymous' imported from main.cpp:1:
In module 'anonymous.container' imported from /Users/anonymous/Code/anonymous/include/anonymous/module.cppm:3:
[1m/Users/anonymous/Code/anonymous/include/anonymous/container/array/array_class/array_nd.cpp:466:11: [0m[0;1;31merror: [0m[1mcannot decompose private member '__base_' of 'std::__1::tuple<anonymous::static_array<int, 2>, int, bool, bool>'[0m
  466 |     auto [smaller_shape, smaller_size, smaller_resizable, smaller_relayoutable] = detail::md_common_smaller<device>(shape(), new_shape);[0m
      | [0;1;32m          ^
[0m[1m/Users/anonymous/Code/anonymous/include/anonymous/container/array/array_class/array_nd.cpp:256:9: [0m[0;1;36mnote: [0min instantiation of member function 'anonymous::array<int, 2>::resize' requested here[0m
  256 |         resize(shp);[0m
      | [0;1;32m        ^
[0m[1mmain.cpp:12:16: [0m[0;1;36mnote: [0min instantiation of member function 'anonymous::array<int, 2>::array' requested here[0m
   12 |     auto mat = array<int,2>{{1, 2}, {3, 4}};[0m
      | [0;1;32m               ^
[0m[1m/opt/homebrew/Cellar/llvm/20.1.3/bin/../include/c++/v1/tuple:541:10: [0m[0;1;36mnote: [0mimplicitly declared private here[0m
  541 |   _BaseT __base_;[0m
      | [0;1;32m         ^
[0mIn module 'anonymous' imported from main.cpp:1:
In module 'anonymous.container' imported from /Users/anonymous/Code/anonymous/include/anonymous/module.cppm:3:
[1m/Users/anonymous/Code/anonymous/include/anonymous/container/array/array_class/array_nd.cpp:466:10: [0m[0;1;31merror: [0m[1mtype 'tuple<static_array<int, 2>, int, bool, bool>' (aka 'anonymous::tuple<anonymous::static_array<int, 2>, int, bool, bool>') decomposes into 1 element, but 4 names were provided[0m
  466 |     auto [smaller_shape, smaller_size, smaller_resizable, smaller_relayoutable] = detail::md_common_smaller<device>(shape(), new_shape);[0m
      | [0;1;32m         ^
[0m[1m/Users/anonymous/Code/anonymous/include/anonymous/container/array/array_class/array_nd.cpp:474:11: [0m[0;1;31merror: [0m[1mcannot decompose private member '__base_' of 'std::__1::tuple<anonymous::static_array<int, 2>, int, bool, bool>'[0m
  474 |     auto [larger_shape, larger_size, larger_resizable, larger_relayoutable] = detail::md_common_larger<device>(shape(), new_shape);[0m
      | [0;1;32m          ^
[0m[1m/opt/homebrew/Cellar/llvm/20.1.3/bin/../include/c++/v1/tuple:541:10: [0m[0;1;36mnote: [0mimplicitly declared private here[0m
  541 |   _BaseT __base_;[0m
      | [0;1;32m         ^
[0mIn module 'anonymous' imported from main.cpp:1:
In module 'anonymous.container' imported from /Users/anonymous/Code/anonymous/include/anonymous/module.cppm:3:
[1m/Users/anonymous/Code/anonymous/include/anonymous/container/array/array_class/array_nd.cpp:474:10: [0m[0;1;31merror: [0m[1mtype 'tuple<static_array<int, 2>, int, bool, bool>' (aka 'anonymous::tuple<anonymous::static_array<int, 2>, int, bool, bool>') decomposes into 1 element, but 4 names were provided[0m
  474 |     auto [larger_shape, larger_size, larger_resizable, larger_relayoutable] = detail::md_common_larger<device>(shape(), new_shape);[0m
      | [0;1;32m         ^
[0m4 errors generated.
